[package]
name = "rust-study"
version = "0.1.0"
edition = "2021"
publish = ["artifactory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
itertools = "0.10.3"
maplit = "1.0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_variant = "0.1.1"
serde-lexpr = "0.1.2"
enum-primitive-derive = "0.2.2"
num-traits = "0.2.15"